--- a/ProjetoBd/nbproject/private/private.properties
+++ b/ProjetoBd/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\01207657\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\loja\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
