--- a/ProjetoBd/nbproject/project.properties
+++ b/ProjetoBd/nbproject/project.properties
@@ -24,14 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProjetoBd.jar
+dist.jar=${dist.dir}/ProjetoBd2.0.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.41-bin.jar=D:\\mysql-connector-java-5.1.41\\mysql-connector-java-5.1.41-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.41-bin.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=telas.TelaLogin
+main.class=telas.principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
